add login and sign up

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -3301,6 +3301,28 @@ input[type="button"].btn-block {
   background-clip: padding-box;
 }
 
+.dropdown-menu-blue {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 5px 0;
+  margin: 2px 0 0;
+  font-size: 14px;
+  list-style: none;
+  color:#fff;
+  background-color: #182945;
+  border: 1px solid #cccccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  background-clip: padding-box;
+}
+
 .dropdown-menu.pull-right {
   right: 0;
   left: auto;
@@ -5663,7 +5685,7 @@ button.close {
 body.modal-open,
 .modal-open .navbar-fixed-top,
 .modal-open .navbar-fixed-bottom {
-  margin-right: 15px;
+  margin-right: 0px;
 }
 
 .modal {
@@ -5700,6 +5722,8 @@ body.modal-open,
   padding: 10px;
   margin-right: auto;
   margin-left: auto;
+  margin-top:100px;
+  max-width:475px;
 }
 
 .modal-content {
@@ -5730,7 +5754,7 @@ body.modal-open,
 }
 
 .modal-backdrop.in {
-  opacity: 0.5;
+  opacity: 0.8;
   filter: alpha(opacity=50);
 }
 
