--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -166,7 +166,7 @@
 			</table>
 
 			<h5 class="monthly-totals">
-				<span class="monthly-totals-sum">MONTHLY TOTALS:</span> 
+				<span class="monthly-totals-sum">TOTALS:</span> 
 				Spent: <span class="monthly-totals-sum"><%= number_to_currency @transactions_this_month.sum(:spent) %></span>
 				Saved: <span class="monthly-totals-sum-np"><%= number_to_currency @transactions_this_month.sum(:saved) %></span>
 				<!-- Average Savings: <span class="monthly-totals-sum-np"></span> -->
