--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -103,7 +103,15 @@ h5.monthly-totals { text-align:center;color:#666;padding-top:20px; }
 .list-container ul li { font-family: 'Give You Glory', cursive;font-size:2.0em;border-bottom:1px solid #74C7FF;padding:10px 0 0 0; }
 .legal-pad { }
 
+.round-img { border-radius:50%;border:5px solid #E9E9DF; }
+.padtop30 { padding-top:30px; }
 
+.landing-text { font-size:3.0em;font-weight:bold; }
+.landing-sub-text { font-size:1.8em;font-weight:300;margin:30px 50px;text-align:center;color:#666; }
+.sign-up-btns { margin-top:30px; }
+.sign-up-free { text-transform:uppercase;font-weight:bold;font-size:2.0em;color:#666;text-align:center; }
+
+.drop-login { margin:20px;width:200px; }
 
 /*.arrow-down { 
     width: 0; 
