--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -13,7 +13,6 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <% if user_signed_in? %>
       <li><%= link_to "Dashboard", root_path %></li>
       <!-- <li><a href="#">Shopping Lists</a></li> -->
       <li><%= link_to "Transactions", transactions_path %></li>
@@ -27,10 +26,6 @@
           <li><a href="#">One more separated link</a></li>
         </ul>
       </li>-->
-      <% else %>
-      <li><%= link_to "Take a Tour", root_path %></li>
-      <li><%= link_to "Blog", transactions_path %></li>
-      <% end %>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
@@ -46,29 +41,13 @@
       </li>
       <% else %>
       <li class="dropdown">
-       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
-       <ul class="dropdown-menu-blue">
-         <li>
-          <div class="drop-login">
-            <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-              <div class="form-group">
-                <label>Email</label>
-                <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control" %>
-              </div>
-              <div class="form-group">
-                <label>Password</label>
-                <%= f.password_field :password, placeholder: "Password", class: "form-control" %>
-              </div>
-              <% if devise_mapping.rememberable? -%>
-              <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
-              <% end -%>
-              <%= f.submit "Sign in", class: "btn btn-blue" %>
-            <% end %>
-            <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-            <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-            <% end -%>
-          </div>
-         </li>
+       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= link_to "Login" %> <b class="caret"></b></a>
+       <ul class="dropdown-menu">
+         <li><%= link_to "Profile", current_user %></li>
+         <li><%= link_to "Dashboard", root_path %></li>
+         <li><%= link_to "Account", "#" %></li>
+         <li class="divider"></li>
+         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
        </ul>
       </li>
       <% end %>
