--- a/app/views/partials/_nonfluid.html.erb
+++ b/app/views/partials/_nonfluid.html.erb
@@ -1,9 +1,15 @@
+<%= render 'partials/user_nav' %>
+<% if user_signed_in? %>
 <div class="dashboard-container">
 	<div class="container">
 		<div class="dash-name">
 			<div class="row">
 				<div class="col-md-6">
+					<% if current_user.first_name.present? %>
 					<h1>Hello there, <%= "#{current_user.first_name}" + "!" %></h1>
+					<% else %>
+					<h1>Hello there! <small><%= link_to "Update your profile", edit_user_registration_path %></small></h1>
+					<% end %>
 				</div>
 				<div class="col-md-6">
 
@@ -146,3 +152,66 @@
 		</div>	
 	</div>
 </div>
+<% else %>
+
+
+<div class="container">
+	<div class="row">
+	<div class="col-md-12"
+		<div class="bogofy-img">
+			<p class="text-center"><%= image_tag 'bogofy-image.jpg' %></p> 
+			<p class="landing-text text-center">Keep track of everything in one place.</p>
+			<p class="landing-sub-text">Bogofy allows you to track your savings, your favorite links, and your shopping lists all in one place. Find friends close to you and follow them to share tips and coupon links.</p>
+			<p class="sign-up-free">Sign up for free!</p>
+			<p class="sign-up-btns text-center">
+				<button class="btn btn-dark btn-lg" id="btn-sign-up" data-toggle="modal" data-target="myModal">Sign up for Bogofy</button>
+				&nbsp;&nbsp;&nbsp;
+				<%= link_to "Sign up with Facebook", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+			</p>
+		</div> 
+		<div class="modal fade" id="myModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<div class="modal-body">
+						<h2 class="text-center">Sign up for FREE!</h2>
+						<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+							<div class="form-group">
+								<label>Email</label>
+								<%= f.email_field :email, class: 'form-control input-lg', placeholder: "Enter email" %>
+							</div>
+							<div class="form-group">
+								<label>Password</label>
+								<%= f.password_field :password, class: "form-control input-lg", placeholder: "Password" %>
+							</div>
+							<div class="form-group">
+								<label>Confirm Password</label>
+								<%= f.password_field :password_confirmation, class: "form-control input-lg", placeholder: "Confirm Password" %>
+							</div>
+							<%= f.submit "Create Account", class: "btn btn-blue btn-block btn-lg" %>
+						<% end %>
+					</div>
+				
+						
+				</div> <!-- MODAL CONTENT -->
+			</div> <!-- MODAL DIALOG -->
+		</div> <!-- MODAL -->		
+	</div>
+	</div>
+</div>
+<% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
