--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,52 +28,72 @@
 </div>
 -->
 
-
-
-
-<div class="container">
+<div class="container padtop30">
 	<div class="row">
-		<div class="col-md-2">
-			<div class="profile-img">
-				<%= image_tag @user.avatar_url(:profile) %>
+		<div class="col-md-4">
+
+			<p><%= image_tag @user.avatar_url(:profile), class: "round-img" %></p>
+
+			<h2><%= "#{@user.first_name} #{@user.last_name}" %></h2>
+
+
+			<h4>Spring Hill, Tennessee</h4>
+			<div class="row">
+				<div class="col-md-4">
+					<p><%= @user.follow_count %><br>Following</p>
+				</div>
+				<div class="col-md-4">
+					<p><%= @user.followers_count %><br>Followers</p>
+				</div>
+				<div class="col-md-4">
+					<p><%= @user.transactions.count %><br>Transactions</p>
+				</div>
 			</div>
+			
+			<% if @user == current_user %>
+				<p class="edit-profile"><%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-dark" %></p>
+			<% end %>
 
-
+			<% if user_signed_in? %>
+				<div id="follow_user<%= @user.id %>">
+					<%= render partial: "follow_user", locals: { user: @user } %>
+				</div>
+			<% end %>
 		</div>
-		<div class="col-md-7">
-			<div class="profile-info">
-				<h1>
-					<%= "#{@user.first_name} #{@user.last_name}" %>
-				</h1>
-				
-				<h4>Spring Hill, Tennessee</h4>
-				<% if @user == current_user %>
-				<p class="edit-profile"><%= link_to "Edit Profile", edit_user_registration_path %></p>
+		<div class="col-md-8">
+			<div class="feed">
+				<h3 class="recent-activity">Recent Posts</h3>
+				<% for micropost in @user_feed %>
+				<div class="micro-container">
+					<div class="micro-image">
+						<% if micropost.user.avatar_url.present? %>
+							<%= image_tag micropost.user.avatar_url(:thumb), align: "left", class: "img-border" %>
+						<% else %>
+							<%= image_tag 'profile-placeholder.png', align: "left", class: "img-border" %>
+						<% end %>
+					</div>
+					<div class="micro-text-container">
+						<p class="micro-text-hdr"><%= "#{micropost.user.first_name} #{micropost.user.last_name}" %> <span class="pull-right time-ago"><%= time_ago_in_words(micropost.created_at) %> ago</span></p>
+						<p class="micro-text"><%= micropost.content %><p>
+					</div>
+				</div>
 				<% end %>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+
+				<!--
 				<div class="btn-group pull-left btn-add1">
 						<button type="button" class="btn btn-dark btn-lg">Followers: <%= @user.followers_count %></button>
 					</div>
 					<div class="pull-left btn-add1">
 						<button type="button" class="btn btn-dark btn-lg">Following: <%= @user.follow_count %></button>
 					</div>
-						
-				<% if user_signed_in? %>
-				<div id="follow_user<%= @user.id %>">
-					<%= render partial: "follow_user", locals: { user: @user } %>
-				</div>
-				<% end %>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<!-- 
-			<div class="savings-box">
-					<h3 class="avg-savings">Average Savings</h3>
-					<h1 class="percentage">45%</h1>
-					<p class="trans">Transaction Count: 32</p>
-					<!--<div class="add-transaction-container">
-							<p class="btn btn-xs btn-default"><span class="glyphicon-small glyphicon-plus"></span> Add Transaction</p>
-						</div>
-			</div> -->
-		</div>
-	</div>
-</div>
+				-->
+			
+			
+
