--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,13 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+	<div class="form-signin">
+		<h2 class="forget">Forgot your password?</h2>
+		<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+		<div class="form-group">
+			<label class="sr-only">Email</label>
+			<%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control input-lg" %>
+		</div>
+		<%= f.submit "Send me reset password instructions", class: "btn btn-blue btn-lg" %>
+		<% end %>		
+	</div>
+</div>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
