--- a/app/views/partials/_nonfluid.html.erb
+++ b/app/views/partials/_nonfluid.html.erb
@@ -178,11 +178,11 @@
 						<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 							<div class="form-group">
 								<label>Email</label>
-								<%= f.email_field :email, class: 'form-control input-lg', placeholder: "Enter email" %>
+								<%= f.email_field :email, class: 'form-control input-lg', placeholder: "Enter email", autocomplete: :off %>
 							</div>
 							<div class="form-group">
 								<label>Password</label>
-								<%= f.password_field :password, class: "form-control input-lg", placeholder: "Password" %>
+								<%= f.password_field :password, class: "form-control input-lg", placeholder: "Password", autocomplete: :off %>
 							</div>
 							<div class="form-group">
 								<label>Confirm Password</label>
