--- a/app/views/partials/_user_nav.html.erb
+++ b/app/views/partials/_user_nav.html.erb
@@ -28,14 +28,18 @@
         </ul>
       </li>-->
       <% else %>
-      <li><%= link_to "Take a Tour", root_path %></li>
+      <li><%= link_to "Take a Tour", tour_path %></li>
       <li><%= link_to "Blog", transactions_path %></li>
       <% end %>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
       <li class="dropdown">
+        <% if current_user.first_name.present? %>
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as <%= "#{current_user.first_name} #{current_user.last_name}" %> <b class="caret"></b></a>
+        <% else %>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logged in as <%= "#{current_user.email}" %> <b class="caret"></b></a>
+        <% end %>
         <ul class="dropdown-menu">
           <li><%= link_to "Profile", current_user %></li>
           <li><%= link_to "Dashboard", root_path %></li>
@@ -47,22 +51,26 @@
       <% else %>
       <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
-       <ul class="dropdown-menu-blue">
+       <ul class="dropdown-menu dropdown-blue">
          <li>
           <div class="drop-login">
             <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
               <div class="form-group">
                 <label>Email</label>
-                <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control" %>
+                <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control", autocomplete: :off %>
               </div>
               <div class="form-group">
                 <label>Password</label>
-                <%= f.password_field :password, placeholder: "Password", class: "form-control" %>
+                <%= f.password_field :password, placeholder: "Password", class: "form-control", autocomplete: :off %>
               </div>
+              <div class="form-group">
               <% if devise_mapping.rememberable? -%>
               <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
               <% end -%>
-              <%= f.submit "Sign in", class: "btn btn-blue" %>
+              </div>
+              <div class="form-group">
+              <%= f.submit "Sign in", class: "btn btn-blue btn-block" %>
+              </div>
             <% end %>
             <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
             <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
